@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Search listings
class SearchListingsQuery <<planned>> {
  +string Term
  +ListingKind? Kind
  +string? Neighbourhood
  +decimal? MaxPrice
  +string? Cursor
}
class SearchListingsQueryHandler <<planned>> {
  +Handle(query: SearchListingsQuery): Task<SearchPage>
}
class Listing {
  +string Title
  +string Description
  +ListingKind Kind
  +ListingStatus Status
  +decimal? Price
}
class SearchPage <<planned>> {
  +IReadOnlyList<BoardListingDto> Listings
  +string? NextCursor
}
SearchListingsQueryHandler ..> SearchListingsQuery : handles
SearchListingsQueryHandler --> Listing : scoped literal search
SearchListingsQueryHandler ..> SearchPage : projects
@enduml
